--- a/mars_ws/src/task1/CMakeLists.txt
+++ b/mars_ws/src/task1/CMakeLists.txt
@@ -216,6 +216,10 @@ add_dependencies(NodeIRpositions ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
+catkin_install_python(PROGRAMS src/car_pos_pub_sub.py 
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
 # install(TARGETS ${PROJECT_NAME}_node
